Add author photos and update title to match poster

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <div class="container">
         <header>
-            <h1>Poster Supplement</h1>
-            <p class="subtitle">Additional information and author details</p>
+            <h1>Random Forests & SAR for Flood Mapping</h1>
+            <p class="subtitle">Optimizing a Pipeline for Accessible Flood Extent Labels</p>
         </header>
 
         <main>
@@ -18,20 +18,34 @@
                 <h2>Authors</h2>
                 
                 <div class="author-card">
-                    <h3>Paul Hosch</h3>
-                    <div class="author-links">
-                        <a href="#" target="_blank" class="link-btn linkedin">LinkedIn</a>
-                        <a href="#" target="_blank" class="link-btn github">GitHub</a>
-                        <a href="#" target="_blank" class="link-btn institute">Institute</a>
+                    <div class="author-content">
+                        <div class="author-info">
+                            <h3>Paul Hosch</h3>
+                            <div class="author-links">
+                                <a href="#" target="_blank" class="link-btn linkedin">LinkedIn</a>
+                                <a href="#" target="_blank" class="link-btn github">GitHub</a>
+                                <a href="#" target="_blank" class="link-btn institute">Institute</a>
+                            </div>
+                        </div>
+                        <div class="author-photo">
+                            <img src="paul.png" alt="Paul Hosch" />
+                        </div>
                     </div>
                 </div>
 
                 <div class="author-card">
-                    <h3>Antrata Dasgupta</h3>
-                    <div class="author-links">
-                        <a href="#" target="_blank" class="link-btn linkedin">LinkedIn</a>
-                        <a href="#" target="_blank" class="link-btn github">GitHub</a>
-                        <a href="#" target="_blank" class="link-btn institute">Institute</a>
+                    <div class="author-content">
+                        <div class="author-info">
+                            <h3>Antrata Dasgupta</h3>
+                            <div class="author-links">
+                                <a href="#" target="_blank" class="link-btn linkedin">LinkedIn</a>
+                                <a href="#" target="_blank" class="link-btn github">GitHub</a>
+                                <a href="#" target="_blank" class="link-btn institute">Institute</a>
+                            </div>
+                        </div>
+                        <div class="author-photo">
+                            <img src="antara.png" alt="Antrata Dasgupta" />
+                        </div>
                     </div>
                 </div>
             </section>
