Add icons to buttons, replace institute with Google Scholar, add email addresses, and create Affiliation section with RWTH logo and institute links

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Poster Supplement - Paul Hosch & Antrata Dasgupta</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <div class="container">
@@ -21,10 +22,19 @@
                     <div class="author-content">
                         <div class="author-info">
                             <h3>Paul Hosch</h3>
+                            <p class="author-email">
+                                <a href="mailto:paul.hosch@rwth-aachen.de">paul.hosch@rwth-aachen.de</a>
+                            </p>
                             <div class="author-links">
-                                <a href="#" target="_blank" class="link-btn linkedin">LinkedIn</a>
-                                <a href="#" target="_blank" class="link-btn github">GitHub</a>
-                                <a href="#" target="_blank" class="link-btn institute">Institute</a>
+                                <a href="#" target="_blank" class="link-btn linkedin">
+                                    <i class="fab fa-linkedin"></i> LinkedIn
+                                </a>
+                                <a href="#" target="_blank" class="link-btn github">
+                                    <i class="fab fa-github"></i> GitHub
+                                </a>
+                                <a href="#" target="_blank" class="link-btn scholar">
+                                    <i class="fas fa-graduation-cap"></i> Google Scholar
+                                </a>
                             </div>
                         </div>
                         <div class="author-photo">
@@ -37,15 +47,41 @@
                     <div class="author-content">
                         <div class="author-info">
                             <h3>Antrata Dasgupta</h3>
+                            <p class="author-email">
+                                <a href="mailto:antara.dasgupta@rwth-aachen.de">antara.dasgupta@rwth-aachen.de</a>
+                            </p>
                             <div class="author-links">
-                                <a href="#" target="_blank" class="link-btn linkedin">LinkedIn</a>
-                                <a href="#" target="_blank" class="link-btn github">GitHub</a>
-                                <a href="#" target="_blank" class="link-btn institute">Institute</a>
+                                <a href="#" target="_blank" class="link-btn linkedin">
+                                    <i class="fab fa-linkedin"></i> LinkedIn
+                                </a>
+                                <a href="#" target="_blank" class="link-btn github">
+                                    <i class="fab fa-github"></i> GitHub
+                                </a>
+                                <a href="#" target="_blank" class="link-btn scholar">
+                                    <i class="fas fa-graduation-cap"></i> Google Scholar
+                                </a>
                             </div>
                         </div>
                         <div class="author-photo">
                             <img src="antara.png" alt="Antrata Dasgupta" />
                         </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="affiliation">
+                <h2>Affiliation</h2>
+                <div class="affiliation-content">
+                    <div class="institute-logo">
+                        <img src="rwth_iww_en_rgb.png" alt="RWTH Aachen University - Institute of Hydraulic Engineering and Water Resources Management" />
+                    </div>
+                    <div class="institute-links">
+                        <a href="https://www.iww.rwth-aachen.de/go/id/lygz/" target="_blank" class="link-btn institute">
+                            <i class="fas fa-university"></i> Institute of Hydraulic Engineering and Water Resources Management
+                        </a>
+                        <a href="https://www.iww.rwth-aachen.de/cms/iww/forschung/forschungsgruppen/~bcuanm/data-driven-computing-in-civil-engineeri/?lidx=1" target="_blank" class="link-btn laboratory">
+                            <i class="fas fa-flask"></i> Data Driven Computing in Civil Engineering
+                        </a>
                     </div>
                 </div>
             </section>
