Implement actual profile links for both authors from links.py - LinkedIn, GitHub, and Google Scholar

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
                                 <a href="mailto:paul.hosch@rwth-aachen.de">paul.hosch@rwth-aachen.de</a>
                             </p>
                             <div class="author-links">
-                                <a href="#" target="_blank" class="link-btn linkedin">
+                                <a href="https://www.linkedin.com/in/paul-hosch" target="_blank" class="link-btn linkedin">
                                     <i class="fab fa-linkedin"></i> LinkedIn
                                 </a>
-                                <a href="#" target="_blank" class="link-btn github">
+                                <a href="https://github.com/paulhosch" target="_blank" class="link-btn github">
                                     <i class="fab fa-github"></i> GitHub
                                 </a>
-                                <a href="#" target="_blank" class="link-btn scholar">
+                                <a href="https://scholar.google.co.in/citations?user=CfV7nHIAAAAJ&hl=de" target="_blank" class="link-btn scholar">
                                     <i class="fas fa-graduation-cap"></i> Google Scholar
                                 </a>
                             </div>
@@ -51,13 +51,13 @@
                                 <a href="mailto:antara.dasgupta@rwth-aachen.de">antara.dasgupta@rwth-aachen.de</a>
                             </p>
                             <div class="author-links">
-                                <a href="#" target="_blank" class="link-btn linkedin">
+                                <a href="https://www.linkedin.com/in/antara-dasgupta-phd-71107973/" target="_blank" class="link-btn linkedin">
                                     <i class="fab fa-linkedin"></i> LinkedIn
                                 </a>
-                                <a href="#" target="_blank" class="link-btn github">
+                                <a href="https://github.com/catantics13" target="_blank" class="link-btn github">
                                     <i class="fab fa-github"></i> GitHub
                                 </a>
-                                <a href="#" target="_blank" class="link-btn scholar">
+                                <a href="https://scholar.google.co.in/citations?hl=de&user=FVlQXAoAAAAJ" target="_blank" class="link-btn scholar">
                                     <i class="fas fa-graduation-cap"></i> Google Scholar
                                 </a>
                             </div>
