Replace Supplementary Information with Sources section, add refined data source citations [1]-[4] with improved formatting and styling

--- a/index.html
+++ b/index.html
@@ -86,17 +86,16 @@
                 </div>
             </section>
 
-            <section class="supplementary">
-                <h2>Supplementary Information</h2>
+            <section class="sources">
+                <h2>Sources</h2>
                 <div class="content-box">
-                    <p>This webpage provides additional details and resources related to our research poster.</p>
+                    <p>This research utilizes multiple geospatial data sources for flood mapping and analysis:</p>
                     
-                    <h3>Additional Resources</h3>
-                    <ul>
-                        <li>Extended methodology details</li>
-                        <li>Additional data visualizations</li>
-                        <li>Code repositories and data sources</li>
-                        <li>Related publications</li>
+                    <ul class="sources-list">
+                        <li><strong>[1]</strong> Sentinel-1 SAR imagery in VV polarization, acquired on October 30, 2024 (© ESA, Copernicus Programme)</li>
+                        <li><strong>[2]</strong> HAND (Height Above Nearest Drainage) dataset, generated using flow direction modeling based on conditioned FathomDEM terrain model and drainage networks from OpenStreetMap (© Fathom, © OpenStreetMap contributors)</li>
+                        <li><strong>[3]</strong> Classification error assessment for Valencia region using an untuned Random Forest model trained on Oder and Danube case studies with 1,000 balanced systematic samples. Validation performed against CEMS Rapid Mapping flood delineation for October 30, 2024, activation ID [EMSR773] (© European Union)</li>
+                        <li><strong>[4]</strong> Landsat 8 optical imagery, 7-5-3 RGB composite, acquired on October 31, 2024 (courtesy of the U.S. Geological Survey)</li>
                     </ul>
                 </div>
             </section>
