Improve sources list with custom numbering and card-style formatting, replace institute button with clickable logo

--- a/index.html
+++ b/index.html
@@ -73,12 +73,11 @@
                 <h2>Affiliation</h2>
                 <div class="affiliation-content">
                     <div class="institute-logo">
-                        <img src="rwth_iww_en_rgb.png" alt="RWTH Aachen University - Institute of Hydraulic Engineering and Water Resources Management" />
+                        <a href="https://www.iww.rwth-aachen.de/go/id/lygz/" target="_blank" class="logo-link">
+                            <img src="rwth_iww_en_rgb.png" alt="RWTH Aachen University - Institute of Hydraulic Engineering and Water Resources Management" />
+                        </a>
                     </div>
                     <div class="institute-links">
-                        <a href="https://www.iww.rwth-aachen.de/go/id/lygz/" target="_blank" class="link-btn institute">
-                            <i class="fas fa-university"></i> Institute of Hydraulic Engineering and Water Resources Management
-                        </a>
                         <a href="https://www.iww.rwth-aachen.de/cms/iww/forschung/forschungsgruppen/~bcuanm/data-driven-computing-in-civil-engineeri/?lidx=1" target="_blank" class="link-btn laboratory">
                             <i class="fas fa-flask"></i> Data Driven Computing in Civil Engineering
                         </a>
